--- a/AlphaCare/AlphaCare/nbproject/private/private.properties
+++ b/AlphaCare/AlphaCare/nbproject/private/private.properties
@@ -1,2 +1,1 @@
-compile.on.save=true
-user.properties.file=C:\\Users\\Joey\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/calvinho/Library/Application Support/NetBeans/8.2/build.properties
